Minor javascript improvements

--- a/wled00/data/index.htm
+++ b/wled00/data/index.htm
@@ -59,7 +59,7 @@
 		<div id="maininfo">Loading...</div><br>
 		<div id="pql">
 		</div>
-		<p class="labels hd">Presets</p>
+		<p class="labels hd">Commands</p>
 		<div id="pcont" class="list">
 			<span onclick="loadPresets()">Loading...</span>
 		</div>
